# dotfiles-tmux

./: .dotgit.yaml  .editorconfig  .envrc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.BEERWARE  LICENSE.MIT  Makefile  README.md  bootstrap.sh  colors.sh  colors.tmux  config.sh  devbox.json  flake.nix  mkdocs.local.yml  mkdocs.yml  package.nix  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.docs.in  requirements.docs.txt  save.sh  setup.sh  status_line.sh  tmux.conf  update_length.sh
.gitlab/commitlint/: gitlab-ci.yaml
.gitlab/dotgit-sync/: gitlab-ci.yaml
.gitlab/markdownlint/: gitlab-ci.yaml
.gitlab/semantic-release/: gitlab-ci.yaml
anakin/: config.sh
boba-fett/: config.sh
config/: bindings.conf  custom.conf  default.conf  options.conf  plugins.conf
darth-vader/: config.sh
defaults/: custom.sh  modules.sh  responsive.sh  tmux.sh
docs/: .gitlab-ci.yml  index.md
docs/_data/: plugins.py  vars.yaml
docs/_data/schema/: repo.schema.yaml  subrepo.schema.yaml  vars.schema.yaml
docs/_data/template/: repo.tpl.yaml  subrepo.tpl.yaml  vars.tpl.yaml
docs/about/: code_of_conduct.md  contributing.md  data_privacy.md  index.md  license.md  release_notes.md
docs/theme/css/: colors.css  extra.css  fonts.css  lightgallery.css  python_markdown_extension.css  theme.css
docs/theme/fonts/: FuraCodeNerdFontComplete-Regular.eot  FuraCodeNerdFontCompleteM-Regular.eot
docs/theme/js/: extra.js  lg-thumbnail.js  lg-video.js  lightgallery.js  mermaid-loader.js  mermaid.js  polyfill.js  tablesort.min.js
docs/theme/js/es5/: core.js  latest.js  loader.js  mml-chtml.js  mml-svg.js  node-main.js  startup.js  tex-chtml-full.js  tex-chtml.js  tex-mml-chtml.js  tex-mml-svg.js  tex-svg-full.js  tex-svg.js
docs/theme/js/es5/a11y/: assistive-mml.js  complexity.js  explorer.js  semantic-enrich.js
docs/theme/js/es5/adaptors/: liteDOM.js
docs/theme/js/es5/input/: asciimath.js  mml.js  tex-base.js  tex-full.js  tex.js
docs/theme/js/es5/input/mml/: entities.js
docs/theme/js/es5/input/tex/extensions/: action.js  all-packages.js  ams.js  amscd.js  autoload.js  bbox.js  boldsymbol.js  braket.js  bussproofs.js  cancel.js  color.js  colorv2.js  configmacros.js  enclose.js  extpfeil.js  html.js  mhchem.js  newcommand.js  noerrors.js  noundefined.js  physics.js  require.js  tagformat.js  textmacros.js  unicode.js  verb.js
docs/theme/js/es5/output/: chtml.js  svg.js
docs/theme/js/es5/output/chtml/fonts/: tex.js
docs/theme/js/es5/output/svg/fonts/: tex.js
docs/theme/js/es5/sre/: sre-node.js  sre_browser.js
docs/theme/js/es5/sre/mathmaps/: de.js  en.js  es.js  fr.js  mathmaps_ie.js  nemeth.js
docs/theme/js/es5/ui/: menu.js  safe.js
hosts/: FBLP-181.sh  anakin.sh  darth-maul.conf  darth-maul.sh  darth-plagueis.sh  darth-vader.sh  kenobi.conf  leia.conf  palpatine.conf  palpatine.sh  r0p1.sh  r3b1.conf  rey.sh
lib/: _tmux_log.sh
modules/: home-manager.nix
palpatine.home/: config.sh
palpatine.local/: config.sh
plugins/: .gitignore  datstatus.tmux
plugins/scripts/: date.sh  helpers.sh  hostname.sh  mode-indicator.sh  session.sh  uptime.sh  window.sh
plugins/tmux-sysstat/: sysstat.tmux
plugins/tmux-sysstat/scripts/: battery.sh  continuum.sh  cpu.sh  date.sh  disk.sh  git.sh  helpers.sh  hostname.sh  ip.sh  mem.sh  mode.sh  mode_indicator.sh  net.sh  online.sh  session.sh  uptime.sh  window.sh
templates/: colors.sh  container.conf  default.sh  mini_computer.conf  perso.conf  perso.sh  pro.conf  server.conf  server.sh
